@@ -19,6 +19,12 @@ Joomla.editors.instances = {};
 Joomla.submitform = function(task, form) {
 	if (typeof(form) === 'undefined') {
 		form = document.getElementById('adminForm');
+		/**
+		 * Added to ensure Joomla 1.5 compatibility
+		 */
+		if(!form){
+			form = document.adminForm;
+		}
 	}
 	if (typeof(task) !== 'undefined') {
 		form.task.value = task;
